Crea estructura de las cartas sin estilo

--- a/mystyle.css
+++ b/mystyle.css
@@ -1,2 +1,10 @@
+
+.box {
+    display: flex;
+    justify-content: center;
+  }
 .attribution { font-size: 11px; text-align: center; }
 .attribution a { color: hsl(228, 45%, 44%); }
+.card {
+    width: 250px;
+}
