--- a/mystyle.css
+++ b/mystyle.css
@@ -1,3 +1,6 @@
+body {
+    background-color: hsl(0, 0%, 95%);
+}
 
 .box {
     display: flex;
@@ -7,4 +10,24 @@
 .attribution a { color: hsl(228, 45%, 44%); }
 .card {
     width: 250px;
+}
+#card-sedans{
+    background-color: hsl(31, 77%, 52%);
+}
+#card-suvs{
+    background-color: hsl(184, 100%, 22%);
+}
+#card-luxury{
+    background-color: hsl(179, 100%, 13%);
+}
+h2 {
+    color: hsl(0, 0%, 95%);
+}
+button {
+    background-color: hsl(0, 0%, 95%);
+    border: none;
+}
+p {
+    color: hsl(0, 0%, 100%, 0.75);
+
 }
