--- a/mystyle.css
+++ b/mystyle.css
@@ -5,33 +5,64 @@ body {
 .box {
     display: flex;
     justify-content: center;
-  }
+    padding: 100px;
+}
 
 .card {
-    width: 250px;
+    width: 170px;
+    justify-content: center;
+    padding: 40px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    box-shadow: 20px 20px 20px rgba(0, 0, 0, 0.1);
+
+
 }
 #card-sedans{
     background-color: hsl(31, 77%, 52%);
+    border-radius: 10px 0px 0px 10px;
 }
 #card-suvs{
     background-color: hsl(184, 100%, 22%);
 }
 #card-luxury{
     background-color: hsl(179, 100%, 13%);
+    border-radius: 0px 10px 10px 0px;
+
 }
 h2 {
     color: hsl(0, 0%, 95%);
     font-family: 'Big Shoulders Display';
-    size:15px;
+    font-size:35px;
 }
 button {
     background-color: hsl(0, 0%, 95%);
     border: none;
+    size: 15px;
+    font-family: 'Lexend Deca';
+    font-size:12px;
+    border-radius: 30px;
+    padding: 10px 20px;
+}
+#b-sedans {
+    color: hsl(31, 77%, 52%);
+}
+#b-suvs {
+    color: hsl(184, 100%, 22%);
+}
+#b-luxury {
+    color: hsl(179, 100%, 13%);
 }
 p {
     color: hsl(0, 0%, 100%, 0.75);
     font-family: 'Lexend Deca';
-    size:15px;
+    font-size:12px;
+    line-height: 1.7;
 }
-.attribution { font-size: 11px; text-align: center; }
-.attribution a { color: hsl(228, 45%, 44%); }
+.attribution { 
+    font-size: 11px; 
+    text-align: center; 
+}
+.attribution a { 
+    color: hsl(228, 45%, 44%); 
+}
